[project]
name = "eventclick"
version = "1.0.0"
description = "Associate event with position click."
authors = [
    {name = "Midry"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput (>=1.8.0,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]

[project.scripts]
ec = "EventClick.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"